By Jonathan Aponte

--- a/Football_data.ipynb
+++ b/Football_data.ipynb
@@ -667,7 +667,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Se selcciona el Id de la competicion que es 43, y la temporada que es 106"
+        "The competition ID, which is 43, and the season, which is 106, are selected."
       ],
       "metadata": {
         "id": "2lxt5SewLCJk"
@@ -2261,11 +2261,11 @@
       ],
       "source": [
         "#Selects Argentina's matches in the World Cup and chooses the variables needed for use\n",
-        "argentiana_matches=WC_matches[(WC_matches['home_team']=='Argentina')|(WC_matches['away_team']=='Argentina')]\n",
-        "argentiana_matches=argentiana_matches[['match_id','match_date', 'kick_off','season','home_team', 'away_team', 'home_score', 'away_score','stadium', 'referee', 'home_managers',\n",
+        "argentina_matches=WC_matches[(WC_matches['home_team']=='Argentina')|(WC_matches['away_team']=='Argentina')]\n",
+        "argentina_matches=argentina_matches[['match_id','match_date', 'kick_off','season','home_team', 'away_team', 'home_score', 'away_score','stadium', 'referee', 'home_managers',\n",
         "       'away_managers']]\n",
         "\n",
-        "argentiana_matches"
+        "argentina_matches"
       ]
     },
     {
@@ -6131,7 +6131,7 @@
         "id": "rKqCMlpSeLz3"
       },
       "source": [
-        "## Argentina's goal"
+        "## Argentina's goals"
       ]
     },
     {
@@ -6561,7 +6561,7 @@
         "id": "h47OJKoOz0tC"
       },
       "source": [
-        "## Substitution"
+        "## Substitutions"
       ]
     },
     {
@@ -14803,13 +14803,10 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "gGjF_cca7s9e",
-        "hlARbKGvHKAY",
-        "bqgtQS0SMQFq",
         "W0ZHMOt_jFjX"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPFpgZvwz4i1eJD1vX0RomG",
+      "authorship_tag": "ABX9TyN6tKxTQvOUB324rLoAN/AQ",
       "include_colab_link": true
     },
     "kernelspec": {
